[FIX] Factura
Se modifica la factura para mostrar mas detalles
